fixed wishlist css alignment

--- a/main_app/static/css/books/wishlist.css
+++ b/main_app/static/css/books/wishlist.css
@@ -1,8 +1,23 @@
 .card-container {
-    padding: 0 30px;
-    display: flex;
+    padding: 0px;
+    display: flex; 
     justify-content: center;
     flex-wrap: wrap;
+    align-items:center;
+    /* flex-direction: column; */
+  } 
+  
+  .card span {
+    width: 60%;
+    height: 60%;
+    margin: auto;
+    text-align: center;
+  }
+  
+  .card-img-container {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
   }
   
   .card {
@@ -18,9 +33,16 @@
   }
 
   
-  .card-content {
+  .card-content { 
     padding: 10px;
     width: 90%;
+
+  }
+
+  .book_cover {
+    width: 80%;
+    justify-content: center;
+
   }
   
   .usr-img {
@@ -43,4 +65,4 @@
     margin: 5px 0;
     font-size: var(--font-reg);
   }
-  
+   */
